// Vitest Snapshot v1

exports[`ChecksumModal component > ChecksumModal copies correctly 1`] = `
<div>
  <div
    aria-hidden="true"
    aria-labelledby="checksumModalLabel"
    class="modal fade"
    id="checksumModal"
    style="z-index: 10000;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-lg"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="checksumModalLabel"
          >
            Checksum (SHA256)
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body text-start"
        >
          <p>
            The checksum is used to ensure the file has not been corrupted during download. You should compare the checksum of the file you received with the value below to ensure the file you received is complete and unmodified.
          </p>
          <p>
            On Windows use 
            <code>
              certUtil -hashfile 
              <var>
                file
              </var>
               SHA256
            </code>
            , on Linux use 
            <code>
              sha256sum 
              <var>
                file
              </var>
            </code>
            , and on macOS use 
            <code>
              shasum -a 256 
              <var>
                file
              </var>
            </code>
            .
          </p>
          <input
            readonly=""
            style="width: 100%;"
            value=""
          />
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Copied
          </button>
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChecksumModal component > ChecksumModal renders correctly 1`] = `
<div>
  <div
    aria-hidden="true"
    aria-labelledby="checksumModalLabel"
    class="modal fade"
    id="checksumModal"
    style="z-index: 10000;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-lg"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="checksumModalLabel"
          >
            Checksum (SHA256)
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body text-start"
        >
          <p>
            The checksum is used to ensure the file has not been corrupted during download. You should compare the checksum of the file you received with the value below to ensure the file you received is complete and unmodified.
          </p>
          <p>
            On Windows use 
            <code>
              certUtil -hashfile 
              <var>
                file
              </var>
               SHA256
            </code>
            , on Linux use 
            <code>
              sha256sum 
              <var>
                file
              </var>
            </code>
            , and on macOS use 
            <code>
              shasum -a 256 
              <var>
                file
              </var>
            </code>
            .
          </p>
          <input
            readonly=""
            style="width: 100%;"
            value=""
          />
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Copy
          </button>
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
